# haskell-stack-builder

./: Dockerfile  GPG-KEY-575159689BEFB442-dev@fpcomplete  GPG-KEY-65101FF31C5C154D-eborsboom@fpcomplete  README.md  cabal-config.cabal  stack-2.3.3-linux-x86_64-bin.asc  stack-2.3.3-linux-x86_64-bin.sha256  stack-2.5.1-linux-x86_64-bin.asc  stack-2.5.1-linux-x86_64-bin.sha256  stack-2.7.3-linux-x86_64-bin.asc  stack-2.7.3-linux-x86_64-bin.sha256  stack-2.7.5-linux-x86_64-bin.asc  stack-2.7.5-linux-x86_64-bin.sha256  stack-2.9.1-linux-x86_64-bin.asc  stack-2.9.1-linux-x86_64-bin.sha256  stack-2.9.3-linux-x86_64-bin.asc  stack-2.9.3-linux-x86_64-bin.sha256  stack-config.yaml
.github/workflows/: docker-image-ci.yaml
test/: docker-with-cache
test/foobar/: .gitignore  Main.hs  README.md  THmod.hs  THmodUseSite.hs  foobar.cabal  stack.lts-14.27.yaml  stack.lts-16.31.yaml  stack.lts-17.11.yaml  stack.lts-17.15.yaml  stack.lts-18.17.yaml  stack.lts-18.28.yaml  stack.lts-19.17.yaml  stack.lts-19.2.yaml  stack.lts-19.25.yaml
